// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should change the selection when a selectable node is clicked 1`] = `
<div>
  <div>
    <div
      class="css-1ccipwk-propertySectionLabel"
    >
      <h6
        class="MuiTypography-root MuiTypography-subtitle2 css-1rf0rca-MuiTypography-root-typography"
      >
        Tree
      </h6>
    </div>
    <ul
      aria-multiselectable="false"
      class="MuiSimpleTreeView-root css-1o8c9x7-MuiSimpleTreeView-root"
      id="mui-tree-view-5"
      role="tree"
      style="--TreeView-itemChildrenIndentation: 12px;"
    >
      <li
        aria-expanded="true"
        aria-selected="false"
        class="MuiTreeItem-root css-jq3mgl-MuiTreeItem-root"
        id="mui-tree-view-5-0"
        role="treeitem"
        tabindex="0"
      >
        <div
          class="MuiTreeItem-content css-1hbjxtc-content css-1kk8xoz-MuiTreeItem-content Mui-expanded"
        >
          <div
            class="MuiTreeItem-iconContainer"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
              data-testid="ExpandMoreIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
            </svg>
          </div>
          <div
            class="MuiTreeItem-label"
          >
            <div
              class="css-1ldt8rl-label"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
              >
                Node-1
              </p>
            </div>
          </div>
        </div>
        <ul
          class="MuiCollapse-root MuiCollapse-vertical MuiTreeItem-groupTransition MuiCollapse-entered css-9jkv99-MuiCollapse-root-MuiTreeItem-groupTransition"
          role="group"
          style="min-height: 0px;"
        >
          <div
            class="MuiCollapse-wrapper MuiCollapse-vertical css-1x6hinx-MuiCollapse-wrapper"
          >
            <div
              class="MuiCollapse-wrapperInner MuiCollapse-vertical css-1i4ywhz-MuiCollapse-wrapperInner"
            >
              <li
                aria-selected="false"
                class="MuiTreeItem-root css-jq3mgl-MuiTreeItem-root"
                id="mui-tree-view-5-0/0"
                role="treeitem"
                tabindex="-1"
              >
                <div
                  class="MuiTreeItem-content css-1hbjxtc-content css-1kk8xoz-MuiTreeItem-content"
                >
                  <div
                    class="MuiTreeItem-iconContainer"
                  />
                  <div
                    class="MuiTreeItem-label"
                  >
                    <div
                      class="css-1ldt8rl-label"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
                      >
                        Node-1.1
                      </p>
                    </div>
                  </div>
                </div>
              </li>
              <li
                aria-selected="false"
                class="MuiTreeItem-root css-jq3mgl-MuiTreeItem-root"
                id="mui-tree-view-5-0/1"
                role="treeitem"
                tabindex="-1"
              >
                <div
                  class="MuiTreeItem-content css-1hbjxtc-content css-1kk8xoz-MuiTreeItem-content"
                >
                  <div
                    class="MuiTreeItem-iconContainer"
                  />
                  <div
                    class="MuiTreeItem-label"
                  >
                    <div
                      class="css-1ldt8rl-label"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
                      >
                        Node-1.2
                      </p>
                    </div>
                  </div>
                </div>
              </li>
            </div>
          </div>
        </ul>
      </li>
      <li
        aria-selected="false"
        class="MuiTreeItem-root css-jq3mgl-MuiTreeItem-root"
        id="mui-tree-view-5-1"
        role="treeitem"
        tabindex="-1"
      >
        <div
          class="MuiTreeItem-content css-1hbjxtc-content css-1kk8xoz-MuiTreeItem-content Mui-expanded"
        >
          <div
            class="MuiTreeItem-iconContainer"
          />
          <div
            class="MuiTreeItem-label"
          >
            <div
              class="css-1ldt8rl-label"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
              >
                Node-2
              </p>
            </div>
          </div>
        </div>
        <ul
          class="MuiCollapse-root MuiCollapse-vertical MuiTreeItem-groupTransition MuiCollapse-entered css-9jkv99-MuiCollapse-root-MuiTreeItem-groupTransition"
          role="group"
          style="min-height: 0px;"
        >
          <div
            class="MuiCollapse-wrapper MuiCollapse-vertical css-1x6hinx-MuiCollapse-wrapper"
          >
            <div
              class="MuiCollapse-wrapperInner MuiCollapse-vertical css-1i4ywhz-MuiCollapse-wrapperInner"
            />
          </div>
        </ul>
      </li>
    </ul>
  </div>
</div>
`;

exports[`should collapse/expand a non-selectable node when clicked 1`] = `
<div>
  <div>
    <div
      class="css-1ccipwk-propertySectionLabel"
    >
      <h6
        class="MuiTypography-root MuiTypography-subtitle2 css-1rf0rca-MuiTypography-root-typography"
      >
        Tree
      </h6>
    </div>
    <ul
      aria-multiselectable="false"
      class="MuiSimpleTreeView-root css-1o8c9x7-MuiSimpleTreeView-root"
      id="mui-tree-view-6"
      role="tree"
      style="--TreeView-itemChildrenIndentation: 12px;"
    >
      <li
        aria-expanded="true"
        aria-selected="false"
        class="MuiTreeItem-root css-jq3mgl-MuiTreeItem-root"
        id="mui-tree-view-6-0"
        role="treeitem"
        tabindex="0"
      >
        <div
          class="MuiTreeItem-content css-1hbjxtc-content css-1kk8xoz-MuiTreeItem-content Mui-expanded"
        >
          <div
            class="MuiTreeItem-iconContainer"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
              data-testid="ExpandMoreIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
            </svg>
          </div>
          <div
            class="MuiTreeItem-label"
          >
            <div
              class="css-1ldt8rl-label"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
              >
                Node-1
              </p>
            </div>
          </div>
        </div>
        <ul
          class="MuiCollapse-root MuiCollapse-vertical MuiTreeItem-groupTransition MuiCollapse-entered css-9jkv99-MuiCollapse-root-MuiTreeItem-groupTransition"
          role="group"
          style="min-height: 0px;"
        >
          <div
            class="MuiCollapse-wrapper MuiCollapse-vertical css-1x6hinx-MuiCollapse-wrapper"
          >
            <div
              class="MuiCollapse-wrapperInner MuiCollapse-vertical css-1i4ywhz-MuiCollapse-wrapperInner"
            >
              <li
                aria-expanded="true"
                aria-selected="false"
                class="MuiTreeItem-root css-jq3mgl-MuiTreeItem-root"
                id="mui-tree-view-6-0/0"
                role="treeitem"
                tabindex="-1"
              >
                <div
                  class="MuiTreeItem-content css-1hbjxtc-content css-1kk8xoz-MuiTreeItem-content Mui-expanded"
                >
                  <div
                    class="MuiTreeItem-iconContainer"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                      data-testid="ExpandMoreIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
                      />
                    </svg>
                  </div>
                  <div
                    class="MuiTreeItem-label"
                  >
                    <div
                      class="css-1ldt8rl-label"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
                      >
                        Node-1.1
                      </p>
                    </div>
                  </div>
                </div>
                <ul
                  class="MuiCollapse-root MuiCollapse-vertical MuiTreeItem-groupTransition MuiCollapse-entered css-9jkv99-MuiCollapse-root-MuiTreeItem-groupTransition"
                  role="group"
                  style="min-height: 0px;"
                >
                  <div
                    class="MuiCollapse-wrapper MuiCollapse-vertical css-1x6hinx-MuiCollapse-wrapper"
                  >
                    <div
                      class="MuiCollapse-wrapperInner MuiCollapse-vertical css-1i4ywhz-MuiCollapse-wrapperInner"
                    >
                      <li
                        aria-selected="false"
                        class="MuiTreeItem-root css-jq3mgl-MuiTreeItem-root"
                        id="mui-tree-view-6-0/0/0"
                        role="treeitem"
                        tabindex="-1"
                      >
                        <div
                          class="MuiTreeItem-content css-1hbjxtc-content css-1kk8xoz-MuiTreeItem-content"
                        >
                          <div
                            class="MuiTreeItem-iconContainer"
                          />
                          <div
                            class="MuiTreeItem-label"
                          >
                            <div
                              class="css-1ldt8rl-label"
                            >
                              <p
                                class="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
                              >
                                Node-1.1.1
                              </p>
                            </div>
                          </div>
                        </div>
                      </li>
                    </div>
                  </div>
                </ul>
              </li>
            </div>
          </div>
        </ul>
      </li>
    </ul>
  </div>
</div>
`;

exports[`should correctly interpret the order of nodes with the same parent in the flat nodes list 1`] = `
<div>
  <div>
    <div
      class="css-1ccipwk-propertySectionLabel"
    >
      <h6
        class="MuiTypography-root MuiTypography-subtitle2 css-1rf0rca-MuiTypography-root-typography"
      >
        Deep Tree
      </h6>
    </div>
    <ul
      aria-multiselectable="false"
      class="MuiSimpleTreeView-root css-1o8c9x7-MuiSimpleTreeView-root"
      id="mui-tree-view-3"
      role="tree"
      style="--TreeView-itemChildrenIndentation: 12px;"
    >
      <li
        aria-expanded="true"
        aria-selected="false"
        class="MuiTreeItem-root css-jq3mgl-MuiTreeItem-root"
        id="mui-tree-view-3-0"
        role="treeitem"
        tabindex="0"
      >
        <div
          class="MuiTreeItem-content css-1hbjxtc-content css-1kk8xoz-MuiTreeItem-content Mui-expanded"
        >
          <div
            class="MuiTreeItem-iconContainer"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
              data-testid="ExpandMoreIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
            </svg>
          </div>
          <div
            class="MuiTreeItem-label"
          >
            <div
              class="css-1ldt8rl-label"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
              >
                Node-2
              </p>
            </div>
          </div>
        </div>
        <ul
          class="MuiCollapse-root MuiCollapse-vertical MuiTreeItem-groupTransition MuiCollapse-entered css-9jkv99-MuiCollapse-root-MuiTreeItem-groupTransition"
          role="group"
          style="min-height: 0px;"
        >
          <div
            class="MuiCollapse-wrapper MuiCollapse-vertical css-1x6hinx-MuiCollapse-wrapper"
          >
            <div
              class="MuiCollapse-wrapperInner MuiCollapse-vertical css-1i4ywhz-MuiCollapse-wrapperInner"
            >
              <li
                aria-selected="false"
                class="MuiTreeItem-root css-jq3mgl-MuiTreeItem-root"
                id="mui-tree-view-3-0/0"
                role="treeitem"
                tabindex="-1"
              >
                <div
                  class="MuiTreeItem-content css-1hbjxtc-content css-1kk8xoz-MuiTreeItem-content"
                >
                  <div
                    class="MuiTreeItem-iconContainer"
                  />
                  <div
                    class="MuiTreeItem-label"
                  >
                    <div
                      class="css-1ldt8rl-label"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
                      >
                        Node-2.1
                      </p>
                    </div>
                  </div>
                </div>
              </li>
            </div>
          </div>
        </ul>
      </li>
      <li
        aria-expanded="true"
        aria-selected="false"
        class="MuiTreeItem-root css-jq3mgl-MuiTreeItem-root"
        id="mui-tree-view-3-1"
        role="treeitem"
        tabindex="-1"
      >
        <div
          class="MuiTreeItem-content css-1hbjxtc-content css-1kk8xoz-MuiTreeItem-content Mui-expanded"
        >
          <div
            class="MuiTreeItem-iconContainer"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
              data-testid="ExpandMoreIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
            </svg>
          </div>
          <div
            class="MuiTreeItem-label"
          >
            <div
              class="css-1ldt8rl-label"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
              >
                Node-1
              </p>
            </div>
          </div>
        </div>
        <ul
          class="MuiCollapse-root MuiCollapse-vertical MuiTreeItem-groupTransition MuiCollapse-entered css-9jkv99-MuiCollapse-root-MuiTreeItem-groupTransition"
          role="group"
          style="min-height: 0px;"
        >
          <div
            class="MuiCollapse-wrapper MuiCollapse-vertical css-1x6hinx-MuiCollapse-wrapper"
          >
            <div
              class="MuiCollapse-wrapperInner MuiCollapse-vertical css-1i4ywhz-MuiCollapse-wrapperInner"
            >
              <li
                aria-expanded="true"
                aria-selected="false"
                class="MuiTreeItem-root css-jq3mgl-MuiTreeItem-root"
                id="mui-tree-view-3-1/0"
                role="treeitem"
                tabindex="-1"
              >
                <div
                  class="MuiTreeItem-content css-1hbjxtc-content css-1kk8xoz-MuiTreeItem-content Mui-expanded"
                >
                  <div
                    class="MuiTreeItem-iconContainer"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                      data-testid="ExpandMoreIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
                      />
                    </svg>
                  </div>
                  <div
                    class="MuiTreeItem-label"
                  >
                    <div
                      class="css-1ldt8rl-label"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
                      >
                        Node-1.1
                      </p>
                    </div>
                  </div>
                </div>
                <ul
                  class="MuiCollapse-root MuiCollapse-vertical MuiTreeItem-groupTransition MuiCollapse-entered css-9jkv99-MuiCollapse-root-MuiTreeItem-groupTransition"
                  role="group"
                  style="min-height: 0px;"
                >
                  <div
                    class="MuiCollapse-wrapper MuiCollapse-vertical css-1x6hinx-MuiCollapse-wrapper"
                  >
                    <div
                      class="MuiCollapse-wrapperInner MuiCollapse-vertical css-1i4ywhz-MuiCollapse-wrapperInner"
                    >
                      <li
                        aria-selected="false"
                        class="MuiTreeItem-root css-jq3mgl-MuiTreeItem-root"
                        id="mui-tree-view-3-1/0/0"
                        role="treeitem"
                        tabindex="-1"
                      >
                        <div
                          class="MuiTreeItem-content css-1hbjxtc-content css-1kk8xoz-MuiTreeItem-content"
                        >
                          <div
                            class="MuiTreeItem-iconContainer"
                          />
                          <div
                            class="MuiTreeItem-label"
                          >
                            <div
                              class="css-1ldt8rl-label"
                            >
                              <p
                                class="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
                              >
                                Node-1.1.2
                              </p>
                            </div>
                          </div>
                        </div>
                      </li>
                      <li
                        aria-selected="false"
                        class="MuiTreeItem-root css-jq3mgl-MuiTreeItem-root"
                        id="mui-tree-view-3-1/0/1"
                        role="treeitem"
                        tabindex="-1"
                      >
                        <div
                          class="MuiTreeItem-content css-1hbjxtc-content css-1kk8xoz-MuiTreeItem-content"
                        >
                          <div
                            class="MuiTreeItem-iconContainer"
                          />
                          <div
                            class="MuiTreeItem-label"
                          >
                            <div
                              class="css-1ldt8rl-label"
                            >
                              <p
                                class="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
                              >
                                Node-1.1.1
                              </p>
                            </div>
                          </div>
                        </div>
                      </li>
                    </div>
                  </div>
                </ul>
              </li>
              <li
                aria-expanded="true"
                aria-selected="false"
                class="MuiTreeItem-root css-jq3mgl-MuiTreeItem-root"
                id="mui-tree-view-3-1/1"
                role="treeitem"
                tabindex="-1"
              >
                <div
                  class="MuiTreeItem-content css-1hbjxtc-content css-1kk8xoz-MuiTreeItem-content Mui-expanded"
                >
                  <div
                    class="MuiTreeItem-iconContainer"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                      data-testid="ExpandMoreIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
                      />
                    </svg>
                  </div>
                  <div
                    class="MuiTreeItem-label"
                  >
                    <div
                      class="css-1ldt8rl-label"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
                      >
                        Node-1.3
                      </p>
                    </div>
                  </div>
                </div>
                <ul
                  class="MuiCollapse-root MuiCollapse-vertical MuiTreeItem-groupTransition MuiCollapse-entered css-9jkv99-MuiCollapse-root-MuiTreeItem-groupTransition"
                  role="group"
                  style="min-height: 0px;"
                >
                  <div
                    class="MuiCollapse-wrapper MuiCollapse-vertical css-1x6hinx-MuiCollapse-wrapper"
                  >
                    <div
                      class="MuiCollapse-wrapperInner MuiCollapse-vertical css-1i4ywhz-MuiCollapse-wrapperInner"
                    >
                      <li
                        aria-expanded="true"
                        aria-selected="false"
                        class="MuiTreeItem-root css-jq3mgl-MuiTreeItem-root"
                        id="mui-tree-view-3-1/1/0"
                        role="treeitem"
                        tabindex="-1"
                      >
                        <div
                          class="MuiTreeItem-content css-1hbjxtc-content css-1kk8xoz-MuiTreeItem-content Mui-expanded"
                        >
                          <div
                            class="MuiTreeItem-iconContainer"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                              data-testid="ExpandMoreIcon"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
                              />
                            </svg>
                          </div>
                          <div
                            class="MuiTreeItem-label"
                          >
                            <div
                              class="css-1ldt8rl-label"
                            >
                              <p
                                class="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
                              >
                                Node-1.3.1
                              </p>
                            </div>
                          </div>
                        </div>
                        <ul
                          class="MuiCollapse-root MuiCollapse-vertical MuiTreeItem-groupTransition MuiCollapse-entered css-9jkv99-MuiCollapse-root-MuiTreeItem-groupTransition"
                          role="group"
                          style="min-height: 0px;"
                        >
                          <div
                            class="MuiCollapse-wrapper MuiCollapse-vertical css-1x6hinx-MuiCollapse-wrapper"
                          >
                            <div
                              class="MuiCollapse-wrapperInner MuiCollapse-vertical css-1i4ywhz-MuiCollapse-wrapperInner"
                            >
                              <li
                                aria-selected="false"
                                class="MuiTreeItem-root css-jq3mgl-MuiTreeItem-root"
                                id="mui-tree-view-3-1/1/0/0"
                                role="treeitem"
                                tabindex="-1"
                              >
                                <div
                                  class="MuiTreeItem-content css-1hbjxtc-content css-1kk8xoz-MuiTreeItem-content"
                                >
                                  <div
                                    class="MuiTreeItem-iconContainer"
                                  />
                                  <div
                                    class="MuiTreeItem-label"
                                  >
                                    <div
                                      class="css-1ldt8rl-label"
                                    >
                                      <p
                                        class="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
                                      >
                                        Node-1.3.1.1
                                      </p>
                                    </div>
                                  </div>
                                </div>
                              </li>
                              <li
                                aria-selected="false"
                                class="MuiTreeItem-root css-jq3mgl-MuiTreeItem-root"
                                id="mui-tree-view-3-1/1/0/1"
                                role="treeitem"
                                tabindex="-1"
                              >
                                <div
                                  class="MuiTreeItem-content css-1hbjxtc-content css-1kk8xoz-MuiTreeItem-content"
                                >
                                  <div
                                    class="MuiTreeItem-iconContainer"
                                  />
                                  <div
                                    class="MuiTreeItem-label"
                                  >
                                    <div
                                      class="css-1ldt8rl-label"
                                    >
                                      <p
                                        class="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
                                      >
                                        Node-1.3.1.2
                                      </p>
                                    </div>
                                  </div>
                                </div>
                              </li>
                            </div>
                          </div>
                        </ul>
                      </li>
                    </div>
                  </div>
                </ul>
              </li>
              <li
                aria-selected="false"
                class="MuiTreeItem-root css-jq3mgl-MuiTreeItem-root"
                id="mui-tree-view-3-1/2"
                role="treeitem"
                tabindex="-1"
              >
                <div
                  class="MuiTreeItem-content css-1hbjxtc-content css-1kk8xoz-MuiTreeItem-content"
                >
                  <div
                    class="MuiTreeItem-iconContainer"
                  />
                  <div
                    class="MuiTreeItem-label"
                  >
                    <div
                      class="css-1ldt8rl-label"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
                      >
                        Node-1.2
                      </p>
                    </div>
                  </div>
                </div>
              </li>
            </div>
          </div>
        </ul>
      </li>
    </ul>
  </div>
</div>
`;

exports[`should only expand the specified nodes on initial render 1`] = `
<div>
  <div>
    <div
      class="css-1ccipwk-propertySectionLabel"
    >
      <h6
        class="MuiTypography-root MuiTypography-subtitle2 css-1rf0rca-MuiTypography-root-typography"
      >
        Deep Tree
      </h6>
    </div>
    <ul
      aria-multiselectable="false"
      class="MuiSimpleTreeView-root css-1o8c9x7-MuiSimpleTreeView-root"
      id="mui-tree-view-4"
      role="tree"
      style="--TreeView-itemChildrenIndentation: 12px;"
    >
      <li
        aria-expanded="true"
        aria-selected="false"
        class="MuiTreeItem-root css-jq3mgl-MuiTreeItem-root"
        id="mui-tree-view-4-0"
        role="treeitem"
        tabindex="0"
      >
        <div
          class="MuiTreeItem-content css-1hbjxtc-content css-1kk8xoz-MuiTreeItem-content Mui-expanded"
        >
          <div
            class="MuiTreeItem-iconContainer"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
              data-testid="ExpandMoreIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
            </svg>
          </div>
          <div
            class="MuiTreeItem-label"
          >
            <div
              class="css-1ldt8rl-label"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
              >
                Node-1
              </p>
            </div>
          </div>
        </div>
        <ul
          class="MuiCollapse-root MuiCollapse-vertical MuiTreeItem-groupTransition MuiCollapse-entered css-9jkv99-MuiCollapse-root-MuiTreeItem-groupTransition"
          role="group"
          style="min-height: 0px;"
        >
          <div
            class="MuiCollapse-wrapper MuiCollapse-vertical css-1x6hinx-MuiCollapse-wrapper"
          >
            <div
              class="MuiCollapse-wrapperInner MuiCollapse-vertical css-1i4ywhz-MuiCollapse-wrapperInner"
            >
              <li
                aria-expanded="false"
                aria-selected="false"
                class="MuiTreeItem-root css-jq3mgl-MuiTreeItem-root"
                id="mui-tree-view-4-0/0"
                role="treeitem"
                tabindex="-1"
              >
                <div
                  class="MuiTreeItem-content css-1hbjxtc-content css-1kk8xoz-MuiTreeItem-content"
                >
                  <div
                    class="MuiTreeItem-iconContainer"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                      data-testid="ChevronRightIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                      />
                    </svg>
                  </div>
                  <div
                    class="MuiTreeItem-label"
                  >
                    <div
                      class="css-1ldt8rl-label"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
                      >
                        Node-1.1
                      </p>
                    </div>
                  </div>
                </div>
              </li>
              <li
                aria-selected="false"
                class="MuiTreeItem-root css-jq3mgl-MuiTreeItem-root"
                id="mui-tree-view-4-0/1"
                role="treeitem"
                tabindex="-1"
              >
                <div
                  class="MuiTreeItem-content css-1hbjxtc-content css-1kk8xoz-MuiTreeItem-content"
                >
                  <div
                    class="MuiTreeItem-iconContainer"
                  />
                  <div
                    class="MuiTreeItem-label"
                  >
                    <div
                      class="css-1ldt8rl-label"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
                      >
                        Node-1.2
                      </p>
                    </div>
                  </div>
                </div>
              </li>
              <li
                aria-expanded="false"
                aria-selected="false"
                class="MuiTreeItem-root css-jq3mgl-MuiTreeItem-root"
                id="mui-tree-view-4-0/2"
                role="treeitem"
                tabindex="-1"
              >
                <div
                  class="MuiTreeItem-content css-1hbjxtc-content css-1kk8xoz-MuiTreeItem-content"
                >
                  <div
                    class="MuiTreeItem-iconContainer"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                      data-testid="ChevronRightIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                      />
                    </svg>
                  </div>
                  <div
                    class="MuiTreeItem-label"
                  >
                    <div
                      class="css-1ldt8rl-label"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
                      >
                        Node-1.3
                      </p>
                    </div>
                  </div>
                </div>
              </li>
            </div>
          </div>
        </ul>
      </li>
      <li
        aria-expanded="true"
        aria-selected="false"
        class="MuiTreeItem-root css-jq3mgl-MuiTreeItem-root"
        id="mui-tree-view-4-1"
        role="treeitem"
        tabindex="-1"
      >
        <div
          class="MuiTreeItem-content css-1hbjxtc-content css-1kk8xoz-MuiTreeItem-content Mui-expanded"
        >
          <div
            class="MuiTreeItem-iconContainer"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
              data-testid="ExpandMoreIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
            </svg>
          </div>
          <div
            class="MuiTreeItem-label"
          >
            <div
              class="css-1ldt8rl-label"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
              >
                Node-2
              </p>
            </div>
          </div>
        </div>
        <ul
          class="MuiCollapse-root MuiCollapse-vertical MuiTreeItem-groupTransition MuiCollapse-entered css-9jkv99-MuiCollapse-root-MuiTreeItem-groupTransition"
          role="group"
          style="min-height: 0px;"
        >
          <div
            class="MuiCollapse-wrapper MuiCollapse-vertical css-1x6hinx-MuiCollapse-wrapper"
          >
            <div
              class="MuiCollapse-wrapperInner MuiCollapse-vertical css-1i4ywhz-MuiCollapse-wrapperInner"
            >
              <li
                aria-selected="false"
                class="MuiTreeItem-root css-jq3mgl-MuiTreeItem-root"
                id="mui-tree-view-4-1/0"
                role="treeitem"
                tabindex="-1"
              >
                <div
                  class="MuiTreeItem-content css-1hbjxtc-content css-1kk8xoz-MuiTreeItem-content"
                >
                  <div
                    class="MuiTreeItem-iconContainer"
                  />
                  <div
                    class="MuiTreeItem-label"
                  >
                    <div
                      class="css-1ldt8rl-label"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
                      >
                        Node-2.1
                      </p>
                    </div>
                  </div>
                </div>
              </li>
            </div>
          </div>
        </ul>
      </li>
    </ul>
  </div>
</div>
`;

exports[`should render a multi-level tree correctly 1`] = `
<div>
  <div>
    <div
      class="css-1ccipwk-propertySectionLabel"
    >
      <h6
        class="MuiTypography-root MuiTypography-subtitle2 css-1rf0rca-MuiTypography-root-typography"
      >
        Deep Tree
      </h6>
    </div>
    <ul
      aria-multiselectable="false"
      class="MuiSimpleTreeView-root css-1o8c9x7-MuiSimpleTreeView-root"
      id="mui-tree-view-2"
      role="tree"
      style="--TreeView-itemChildrenIndentation: 12px;"
    >
      <li
        aria-expanded="true"
        aria-selected="false"
        class="MuiTreeItem-root css-jq3mgl-MuiTreeItem-root"
        id="mui-tree-view-2-0"
        role="treeitem"
        tabindex="0"
      >
        <div
          class="MuiTreeItem-content css-1hbjxtc-content css-1kk8xoz-MuiTreeItem-content Mui-expanded"
        >
          <div
            class="MuiTreeItem-iconContainer"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
              data-testid="ExpandMoreIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
            </svg>
          </div>
          <div
            class="MuiTreeItem-label"
          >
            <div
              class="css-1ldt8rl-label"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
              >
                Node-1
              </p>
            </div>
          </div>
        </div>
        <ul
          class="MuiCollapse-root MuiCollapse-vertical MuiTreeItem-groupTransition MuiCollapse-entered css-9jkv99-MuiCollapse-root-MuiTreeItem-groupTransition"
          role="group"
          style="min-height: 0px;"
        >
          <div
            class="MuiCollapse-wrapper MuiCollapse-vertical css-1x6hinx-MuiCollapse-wrapper"
          >
            <div
              class="MuiCollapse-wrapperInner MuiCollapse-vertical css-1i4ywhz-MuiCollapse-wrapperInner"
            >
              <li
                aria-expanded="true"
                aria-selected="false"
                class="MuiTreeItem-root css-jq3mgl-MuiTreeItem-root"
                id="mui-tree-view-2-0/0"
                role="treeitem"
                tabindex="-1"
              >
                <div
                  class="MuiTreeItem-content css-1hbjxtc-content css-1kk8xoz-MuiTreeItem-content Mui-expanded"
                >
                  <div
                    class="MuiTreeItem-iconContainer"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                      data-testid="ExpandMoreIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
                      />
                    </svg>
                  </div>
                  <div
                    class="MuiTreeItem-label"
                  >
                    <div
                      class="css-1ldt8rl-label"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
                      >
                        Node-1.1
                      </p>
                    </div>
                  </div>
                </div>
                <ul
                  class="MuiCollapse-root MuiCollapse-vertical MuiTreeItem-groupTransition MuiCollapse-entered css-9jkv99-MuiCollapse-root-MuiTreeItem-groupTransition"
                  role="group"
                  style="min-height: 0px;"
                >
                  <div
                    class="MuiCollapse-wrapper MuiCollapse-vertical css-1x6hinx-MuiCollapse-wrapper"
                  >
                    <div
                      class="MuiCollapse-wrapperInner MuiCollapse-vertical css-1i4ywhz-MuiCollapse-wrapperInner"
                    >
                      <li
                        aria-selected="false"
                        class="MuiTreeItem-root css-jq3mgl-MuiTreeItem-root"
                        id="mui-tree-view-2-0/0/0"
                        role="treeitem"
                        tabindex="-1"
                      >
                        <div
                          class="MuiTreeItem-content css-1hbjxtc-content css-1kk8xoz-MuiTreeItem-content"
                        >
                          <div
                            class="MuiTreeItem-iconContainer"
                          />
                          <div
                            class="MuiTreeItem-label"
                          >
                            <div
                              class="css-1ldt8rl-label"
                            >
                              <p
                                class="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
                              >
                                Node-1.1.1
                              </p>
                            </div>
                          </div>
                        </div>
                      </li>
                      <li
                        aria-selected="false"
                        class="MuiTreeItem-root css-jq3mgl-MuiTreeItem-root"
                        id="mui-tree-view-2-0/0/1"
                        role="treeitem"
                        tabindex="-1"
                      >
                        <div
                          class="MuiTreeItem-content css-1hbjxtc-content css-1kk8xoz-MuiTreeItem-content"
                        >
                          <div
                            class="MuiTreeItem-iconContainer"
                          />
                          <div
                            class="MuiTreeItem-label"
                          >
                            <div
                              class="css-1ldt8rl-label"
                            >
                              <p
                                class="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
                              >
                                Node-1.1.2
                              </p>
                            </div>
                          </div>
                        </div>
                      </li>
                    </div>
                  </div>
                </ul>
              </li>
              <li
                aria-selected="false"
                class="MuiTreeItem-root css-jq3mgl-MuiTreeItem-root"
                id="mui-tree-view-2-0/1"
                role="treeitem"
                tabindex="-1"
              >
                <div
                  class="MuiTreeItem-content css-1hbjxtc-content css-1kk8xoz-MuiTreeItem-content"
                >
                  <div
                    class="MuiTreeItem-iconContainer"
                  />
                  <div
                    class="MuiTreeItem-label"
                  >
                    <div
                      class="css-1ldt8rl-label"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
                      >
                        Node-1.2
                      </p>
                    </div>
                  </div>
                </div>
              </li>
              <li
                aria-expanded="true"
                aria-selected="false"
                class="MuiTreeItem-root css-jq3mgl-MuiTreeItem-root"
                id="mui-tree-view-2-0/2"
                role="treeitem"
                tabindex="-1"
              >
                <div
                  class="MuiTreeItem-content css-1hbjxtc-content css-1kk8xoz-MuiTreeItem-content Mui-expanded"
                >
                  <div
                    class="MuiTreeItem-iconContainer"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                      data-testid="ExpandMoreIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
                      />
                    </svg>
                  </div>
                  <div
                    class="MuiTreeItem-label"
                  >
                    <div
                      class="css-1ldt8rl-label"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
                      >
                        Node-1.3
                      </p>
                    </div>
                  </div>
                </div>
                <ul
                  class="MuiCollapse-root MuiCollapse-vertical MuiTreeItem-groupTransition MuiCollapse-entered css-9jkv99-MuiCollapse-root-MuiTreeItem-groupTransition"
                  role="group"
                  style="min-height: 0px;"
                >
                  <div
                    class="MuiCollapse-wrapper MuiCollapse-vertical css-1x6hinx-MuiCollapse-wrapper"
                  >
                    <div
                      class="MuiCollapse-wrapperInner MuiCollapse-vertical css-1i4ywhz-MuiCollapse-wrapperInner"
                    >
                      <li
                        aria-expanded="true"
                        aria-selected="false"
                        class="MuiTreeItem-root css-jq3mgl-MuiTreeItem-root"
                        id="mui-tree-view-2-0/2/0"
                        role="treeitem"
                        tabindex="-1"
                      >
                        <div
                          class="MuiTreeItem-content css-1hbjxtc-content css-1kk8xoz-MuiTreeItem-content Mui-expanded"
                        >
                          <div
                            class="MuiTreeItem-iconContainer"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                              data-testid="ExpandMoreIcon"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
                              />
                            </svg>
                          </div>
                          <div
                            class="MuiTreeItem-label"
                          >
                            <div
                              class="css-1ldt8rl-label"
                            >
                              <p
                                class="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
                              >
                                Node-1.3.1
                              </p>
                            </div>
                          </div>
                        </div>
                        <ul
                          class="MuiCollapse-root MuiCollapse-vertical MuiTreeItem-groupTransition MuiCollapse-entered css-9jkv99-MuiCollapse-root-MuiTreeItem-groupTransition"
                          role="group"
                          style="min-height: 0px;"
                        >
                          <div
                            class="MuiCollapse-wrapper MuiCollapse-vertical css-1x6hinx-MuiCollapse-wrapper"
                          >
                            <div
                              class="MuiCollapse-wrapperInner MuiCollapse-vertical css-1i4ywhz-MuiCollapse-wrapperInner"
                            >
                              <li
                                aria-selected="false"
                                class="MuiTreeItem-root css-jq3mgl-MuiTreeItem-root"
                                id="mui-tree-view-2-0/2/0/0"
                                role="treeitem"
                                tabindex="-1"
                              >
                                <div
                                  class="MuiTreeItem-content css-1hbjxtc-content css-1kk8xoz-MuiTreeItem-content"
                                >
                                  <div
                                    class="MuiTreeItem-iconContainer"
                                  />
                                  <div
                                    class="MuiTreeItem-label"
                                  >
                                    <div
                                      class="css-1ldt8rl-label"
                                    >
                                      <p
                                        class="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
                                      >
                                        Node-1.3.1.1
                                      </p>
                                    </div>
                                  </div>
                                </div>
                              </li>
                              <li
                                aria-selected="false"
                                class="MuiTreeItem-root css-jq3mgl-MuiTreeItem-root"
                                id="mui-tree-view-2-0/2/0/1"
                                role="treeitem"
                                tabindex="-1"
                              >
                                <div
                                  class="MuiTreeItem-content css-1hbjxtc-content css-1kk8xoz-MuiTreeItem-content"
                                >
                                  <div
                                    class="MuiTreeItem-iconContainer"
                                  />
                                  <div
                                    class="MuiTreeItem-label"
                                  >
                                    <div
                                      class="css-1ldt8rl-label"
                                    >
                                      <p
                                        class="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
                                      >
                                        Node-1.3.1.2
                                      </p>
                                    </div>
                                  </div>
                                </div>
                              </li>
                            </div>
                          </div>
                        </ul>
                      </li>
                    </div>
                  </div>
                </ul>
              </li>
            </div>
          </div>
        </ul>
      </li>
      <li
        aria-expanded="true"
        aria-selected="false"
        class="MuiTreeItem-root css-jq3mgl-MuiTreeItem-root"
        id="mui-tree-view-2-1"
        role="treeitem"
        tabindex="-1"
      >
        <div
          class="MuiTreeItem-content css-1hbjxtc-content css-1kk8xoz-MuiTreeItem-content Mui-expanded"
        >
          <div
            class="MuiTreeItem-iconContainer"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
              data-testid="ExpandMoreIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
            </svg>
          </div>
          <div
            class="MuiTreeItem-label"
          >
            <div
              class="css-1ldt8rl-label"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
              >
                Node-2
              </p>
            </div>
          </div>
        </div>
        <ul
          class="MuiCollapse-root MuiCollapse-vertical MuiTreeItem-groupTransition MuiCollapse-entered css-9jkv99-MuiCollapse-root-MuiTreeItem-groupTransition"
          role="group"
          style="min-height: 0px;"
        >
          <div
            class="MuiCollapse-wrapper MuiCollapse-vertical css-1x6hinx-MuiCollapse-wrapper"
          >
            <div
              class="MuiCollapse-wrapperInner MuiCollapse-vertical css-1i4ywhz-MuiCollapse-wrapperInner"
            >
              <li
                aria-selected="false"
                class="MuiTreeItem-root css-jq3mgl-MuiTreeItem-root"
                id="mui-tree-view-2-1/0"
                role="treeitem"
                tabindex="-1"
              >
                <div
                  class="MuiTreeItem-content css-1hbjxtc-content css-1kk8xoz-MuiTreeItem-content"
                >
                  <div
                    class="MuiTreeItem-iconContainer"
                  />
                  <div
                    class="MuiTreeItem-label"
                  >
                    <div
                      class="css-1ldt8rl-label"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
                      >
                        Node-2.1
                      </p>
                    </div>
                  </div>
                </div>
              </li>
            </div>
          </div>
        </ul>
      </li>
    </ul>
  </div>
</div>
`;

exports[`should render the tree 1`] = `
<div>
  <div>
    <div
      class="css-1ccipwk-propertySectionLabel"
    >
      <h6
        class="MuiTypography-root MuiTypography-subtitle2 css-1rf0rca-MuiTypography-root-typography"
      >
        Default Tree
      </h6>
    </div>
    <ul
      aria-multiselectable="false"
      class="MuiSimpleTreeView-root css-1o8c9x7-MuiSimpleTreeView-root"
      id="mui-tree-view-1"
      role="tree"
      style="--TreeView-itemChildrenIndentation: 12px;"
    >
      <li
        aria-selected="false"
        class="MuiTreeItem-root css-jq3mgl-MuiTreeItem-root"
        id="mui-tree-view-1-0"
        role="treeitem"
        tabindex="0"
      >
        <div
          class="MuiTreeItem-content css-1hbjxtc-content css-1kk8xoz-MuiTreeItem-content"
        >
          <div
            class="MuiTreeItem-iconContainer"
          />
          <div
            class="MuiTreeItem-label"
          >
            <div
              class="css-1ldt8rl-label"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
              >
                Node-root1
              </p>
            </div>
          </div>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`should render the tree with a help hint 1`] = `
<div>
  <div>
    <div
      class="css-1ccipwk-propertySectionLabel"
    >
      <h6
        class="MuiTypography-root MuiTypography-subtitle2 css-1rf0rca-MuiTypography-root-typography"
      >
        Default Tree
      </h6>
      <div
        class="css-vrp56w-decorators"
      >
        <svg
          aria-hidden="true"
          aria-label=""
          class="MuiSvgIcon-root MuiSvgIcon-colorSecondary MuiSvgIcon-fontSizeMedium css-25to7p-MuiSvgIcon-root"
          data-mui-internal-clone-element="true"
          data-testid="HelpOutlineOutlinedIcon"
          focusable="false"
          style="margin-left: 8px; font-size: 16px;"
          viewBox="0 0 24 24"
        >
          <path
            d="M11 18h2v-2h-2zm1-16C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8m0-14c-2.21 0-4 1.79-4 4h2c0-1.1.9-2 2-2s2 .9 2 2c0 2-3 1.75-3 5h2c0-2.25 3-2.5 3-5 0-2.21-1.79-4-4-4"
          />
        </svg>
      </div>
    </div>
    <ul
      aria-multiselectable="false"
      class="MuiSimpleTreeView-root css-1o8c9x7-MuiSimpleTreeView-root"
      id="mui-tree-view-7"
      role="tree"
      style="--TreeView-itemChildrenIndentation: 12px;"
    >
      <li
        aria-selected="false"
        class="MuiTreeItem-root css-jq3mgl-MuiTreeItem-root"
        id="mui-tree-view-7-0"
        role="treeitem"
        tabindex="0"
      >
        <div
          class="MuiTreeItem-content css-1hbjxtc-content css-1kk8xoz-MuiTreeItem-content"
        >
          <div
            class="MuiTreeItem-iconContainer"
          />
          <div
            class="MuiTreeItem-label"
          >
            <div
              class="css-1ldt8rl-label"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
              >
                Node-root1
              </p>
            </div>
          </div>
        </div>
      </li>
    </ul>
  </div>
</div>
`;
